--- a/Mapping_Multiple_Points/index.html
+++ b/Mapping_Multiple_Points/index.html
@@ -28,6 +28,9 @@
  
 <!--API Key-->
 <script type="text/javascript" src = "static/js/config.js"></script>
+<!--Data-->
+<script type="text/javascript" src = "static/js/cities.js"></script>
+
 <!--JavaScript-->
 <script type="text/javascript" src = "static/js/logic.js"></script>
 
