--- a/Earthquakes_past7days/index.html
+++ b/Earthquakes_past7days/index.html
@@ -34,7 +34,7 @@
 <script type="text/javascript" src = "static/js/cities.js"></script>
 
 <!--JavaScript-->
-<script type="text/javascript" src = "static/js/logic.js"></script>
+<script type="text/javascript" src = "static/js/logicStep1.js"></script>
 
     
 </body>
