--- a/Earthquake_Challenge/index.html
+++ b/Earthquake_Challenge/index.html
@@ -30,11 +30,9 @@
  
 <!--API Key-->
 <script type="text/javascript" src = "static/js/config.js"></script>
-<!--Data-->
-<script type="text/javascript" src = "static/js/cities.js"></script>
 
 <!--JavaScript-->
-<script type="text/javascript" src = "static/js/logicStep5.js"></script>
+<script type="text/javascript" src = "static/js/challenge_logic.js"></script>
 
     
 </body>
